--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <p>Welcome, GoGaurdian, to the final boss. <a herf="files/slope/index.html">Click here. I dare you.</a></p>
+    <p>Welcome, GoGaurdian, to the final boss. <a href="files/slope/index.html">Click here. I dare you.</a></p>
   </body>
 </html>
