--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <p>Welcome, GoGaurdian, to the final boss. <a href="files/slope/index.html">Click here. I dare you.</a></p>
+    <p>Website interface coming eventually (1-1000 years)<br>Welcome to the land of GoGaurdian-proof games.<br><a href="files/tetris/index.html">Tetris</a><br><a href="files/slope/index.html">Slope</a><br><a href="files/minesweeper/index.html">Minesweeper</a></p>
   </body>
 </html>
