--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
+  <head>
+    <title>Mathematics</title>
+    <styles>
+      img {
+      width: 15%
+      }
+    </styles>
+  </head>
   <body>
+    <img src="title.png">
     <p>Website interface coming eventually (1-1000 years)<br>Welcome to the land of GoGaurdian-proof games.<br><a href="files/tetris/index.html">Tetris</a><br><a href="files/slope/index.html">Slope</a><br><a href="files/minesweeper/index.html">Minesweeper</a><br><a>Many more coming soon.</a></p>
   </body>
 </html>
