--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Mathematics</title>
-    <styles>
+    <style>
       img {
       width: 15%
       }
-    </styles>
+    </style>
   </head>
   <body>
     <img src="title.png">
