--- a/404.html
+++ b/404.html
@@ -3,6 +3,6 @@
     <tltle>Purgatory</tltle>
   </head>
   <body>
-    <p>Welcome to <em>Purgatory.</em> It seems the page you are looking for does not exist. Whether it once existed at some point in time or is but a figment of your imagination, it is not here.<br>Go away now, there is nothing for you here.<br>Unless you'd like to return to the home page, in which case you could click <a href="zenith/index.html">here.</a></p>
+    <p>Welcome to <em>Purgatory.</em> It seems the page you are looking for does not exist. Whether it once existed at some point in time or is but a figment of your imagination, it is not here.<br>Go away now, there is nothing for you here.<br>Unless you'd like to return to the home page, in which case you could click <a href="myriadsites.github.io/zenith">here.</a></p>
   </body>
 </html>
