--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <img src="title.png">
-    <p>Website interface coming eventually (1-1000 years)<br>Welcome to the land of GoGaurdian-proof games.<br><a href="files/tetris/index.html">Tetris</a><br><a href="files/slope/index.html">Slope</a><br><a href="files/minesweeper/index.html">Minesweeper</a><br><a>Many more coming soon.</a></p>
+    <p>Website interface coming eventually (1-1000 years)<br>Welcome to the land of GoGaurdian-proof games.<br><a href="files/slope/index.html">Slope</a><br><a href="files/sandboxels/index.html">Sandboxels</a><br><a href="files/tetris/index.html">Tetris</a><br><a>Many more coming soon.</a></p>
   </body>
 </html>
