--- a/files/chrome-dino/index2.html
+++ b/files/chrome-dino/index2.html
@@ -21,6 +21,7 @@
         justify-content: center;
       }
     </style>
+    <center><h2>Text!</h2></center>
   </head>
   <body>
     <script type="module" src="./lib/index.js"></script>
