--- a/files/chrome-dino/index2.html
+++ b/files/chrome-dino/index2.html
@@ -20,6 +20,9 @@
         display: flex;
         justify-content: center;
       }
+      center {
+        position: absolute;
+      }
     </style>
     <center><h2>Text!</h2></center>
   </head>
