--- a/files/chrome-dino/index2.html
+++ b/files/chrome-dino/index2.html
@@ -22,6 +22,7 @@
       }
       center {
         position: absolute;
+        margin-top: -50%;
       }
     </style>
     <center><h2>Text!</h2></center>
